task: Fixed up letter spacing, finished up button

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,22 +1,67 @@
 @use '../../styles/colors.module';
+@use '../../styles/mixins.module';
+
+%disabled {
+  cursor: not-allowed;
+}
 
 .base {
+  padding: 0.5rem 1rem;
+  border-radius: 0.325rem;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  cursor: pointer;
+  border: none;
 
+  &:disabled {
+    @extend %disabled;
+  }
+}
+
+.disabled {
+  @extend %disabled;
 }
 
 .color {
   @each $color, $_ in colors.$config {
     &--#{$color} {
-      --button-c: colors.getColor($color);
-      --button-h: colors.getColor($color, hover);
-      --button-a: colors.getColor($color, active);
+      --button-c: #{colors.getColor($color)};
+      --button-h: #{colors.getColor($color, hover)};
+      --button-a: #{colors.getColor($color, active)};
     }
   }
 }
 
 .variant {
   &--solid {
-    background-color: var(--button-color);
+    @include mixins.transition(background-color);
+    background-color: var(--button-c);
     color: colors.getColor(copy-light);
+
+    &:not(:disabled), &:not(.disabled) {
+      &:hover, &:focus {
+        background-color: var(--button-h);
+      }
+  
+      &:active {
+        background-color: var(--button-a);
+      }
+    }
+
+    &.disabled, &:disabled {
+      background-color: colors.getColor(disabled-light);
+      color: colors.getColor(disabled-dark);
+    }
+  }
+}
+
+.icon {
+  &:first-child {
+    margin-right: 1rem;
+  }
+
+  &:last-child {
+    margin-left: 1rem;
   }
 }
