--- a/src/styles/_fonts.module.scss
+++ b/src/styles/_fonts.module.scss
@@ -3,49 +3,49 @@ $config: (
     font-weight: 800,
     font-size: 4.25rem,
     line-height: 4.5rem,
-    letter-spacing: 10%,
+    letter-spacing: 4.25rem * 0.1,
   ),
   heading2: (
     font-weight: 700,
     font-size: 2.625rem,
     line-height: 3rem,
-    letter-spacing: 5%,
+    letter-spacing: 2.625rem * 0.05,
   ),
   heading3: (
     font-weight: 700,
     font-size: 1.625rem,
     line-height: 2.5rem,
-    letter-spacing: 5%,
+    letter-spacing: 1.625rem * 0.05,
   ),
   heading4: (
     font-weight: 700,
     font-size: 1rem,
     line-height: 1.5rem,
-    letter-spacing: 5%,
+    letter-spacing: 1rem * 0.05,
   ),
   subheading: (
     font-weight: 600,
     font-size: 1rem,
     line-height: 1.5rem,
-    letter-spacing: 5%,
+    letter-spacing: 1rem * 0.05,
   ),
   paragraph1: (
     font-weight: 400,
     font-size: 1rem,
     line-height: 1.5rem,
-    letter-spacing: 5%,
+    letter-spacing: 1rem * 0.05,
   ),
   paragraph2: (
     font-weight: 400,
     font-size: 0.875rem,
     line-height: 1.5rem,
-    letter-spacing: 5%,
+    letter-spacing: 0.875rem * 0.05,
   ),
   paragraph3: (
     font-weight: 400,
     font-size: 0.75rem,
     line-height: 1.5rem,
-    letter-spacing: 5%,
+    letter-spacing: 0.75rem * 0.05,
   ),
 );
 
